# issi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alias.txt  codigos-renombrados.csv  consejeria-de-agricultura-ganaderia-pesca-y-soberania-alimentaria-A05033198.csv  consejeria-de-bienestar-social-igualdad-juventud-infancia-y-familias-A05045232.csv  consejeria-de-economia-industria-comercio-y-autonomos-A05033180.csv  consejeria-de-educacion-formacion-profesional-actividad-fisica-y-deportes-A05047932.csv  consejeria-de-hacienda-y-relaciones-con-la-union-europea-A05032839.csv  consejeria-de-obras-publicas-vivienda-y-movilidad-A05032833.csv  consejeria-de-politica-territorial-cohesion-territorial-y-aguas-A05047663.csv  consejeria-de-presidencia-administraciones-publicas-justicia-y-seguridad-A05033187.csv  consejeria-de-sanidad-A05002852.csv  consejeria-de-transicion-ecologica-y-energia-A05047664.csv  consejeria-de-turismo-y-empleo-A05030988.csv  consejeria-de-universidades-ciencia-e-innovacion-y-cultura-A05046692.csv  deploy.sh  domaths.py  dump_data.sh  dump_dir3.py  enlaces_rotos.md  export_database.sh  filters.py  import_database.sh  justfile  notas-revision-ucic.rst  organigrama.csv  presidencia-del-gobierno-A05002844.csv  progreso.ods  progreso.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_filters.py
antecedentes/: admin.py  models.py
apis/: juriscan.py
caches/: dir3.py  temas.py
comun/: admin.py  breadcrumbs.py  bus.py  charts.py  claves.py  colors.py  commands.py  error.py  filters.py  forms.py  funcop.py  graficas.py  links.py  models.py  notificador.py  opendata.py  results.py  searchers.py  urls.py  views.py
directorio/: admin.py  breadcrumbs.py  converters.py  filtersets.py  links.py  models.py  urls.py  views.py
docs/: FAQ.md  ISIs.drawio  comun.rst  conf.py  entes.rst  estimacion_calidad.rst  glosario.md  importacion_exportacion.rst  index.rst  materias.rst  modulo_glosario.rst  rat.rst  sistemas.rst  subtipos.rst  webforms.rst
extra/: TEEN.ods
familias/: admin.py  apps.py  models.py  urls.py  views.py
fixtures/: admin.json  auth.json  auth.user.json  contenttypes.json  directorio.json  familias.json  glosario.json  juriscan.json  normativa.json  omnibus.json  plan.json  sistemas.json
glosario/: admin.py  breadcrumbs.py  links.py  models.py  urls.py  views.py
imports/: ACPMN.csv  ACPMN.md  AGPSA.csv  AGPSA.md  BSIJIF.csv  BSIJIF.md  EFPAFYD.csv  EFPAFYD.md  EICA.csv  EICA.md  ESSSCAN.csv  ESSSCAN.md  ISTAC.csv  ISTAC.md  OPVM.csv  OPVM.md  PAPJS.csv  PAPJS.md  PREGOB.csv  SCS.csv
juriscan/: admin.py  apps.py  breadcrumbs.py  links.py  models.py  samples_juriscan.sql  urls.py  views.py
main/: api.py  settings.py  urls.py
normativa/: admin.py  apps.py  breadcrumbs.py  links.py  models.py  urls.py  views.py
notebooks/: ICAVI.ipynb  (+2 more)
(+377 files in other folders)
