[project]
name = "issi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.5",
    "codespell==2.4.1",
    "dj-database-url==3.1.2",
    "django==6.0.2",
    "django-docs==0.3.3",
    "django-filter==25.2",
    "django-health-check==3.22.0",
    "django-import-export[ods]>=4.4.0",
    "django-ninja>=1.6.2",
    "gunicorn>=25.3.0",
    "markdown==3.8.2",
    "myst-parser>=5.0.0",
    "ninja>=1.13.0",
    "odfpy==1.4.1",
    "pandas==3.0.0",
    "pillow==12.0.0",
    "prettyconf==2.3.0",
    "psutil==7.2.1",
    "psycopg2-binary==2.9.11",
    "pychart-js==0.3.0",
    "rich==14.1.0",
    "ruff>=0.15.11",
    "uvicorn>=0.44.0",
    "uvicorn-worker>=0.4.0",
    "werkzeug==3.1.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"

python_files = [
    "test_*.py",
    "*_test.py",
    "testing/python/*.py",
    ]


[tool.ty.rules]

unresolved-attribute = "ignore"
