[project]
name = "issi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bandit==1.9.1",
    "beautifulsoup4==4.13.5",
    "codespell==2.4.1",
    "cutelog>=2.2.0",
    "dj-database-url==3.1.2",
    "django==6.0.2",
    "django-debug-toolbar==6.2.0",
    "django-docs==0.3.3",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-health-check==3.22.0",
    "django-import-export[ods]>=4.4.0",
    "django-ninja==1.6.2",
    "django-werkzeug==1.0.0",
    "gunicorn>=25.3.0",
    "icecream==2.1.8",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "markdown==3.8.2",
    "myst-nb>=1.4.0",
    "myst-parser>=5.0.0",
    "odfpy==1.4.1",
    "pandas==3.0.0",
    "pillow==12.0.0",
    "prettyconf==2.3.0",
    "pss>=1.45",
    "psutil==7.2.1",
    "psycopg2-binary==2.9.11",
    "pychart-js==0.3.0",
    "pydot==4.0.1",
    "pytest==9.0.1",
    "pytest-django==4.12.0",
    "rich==14.1.0",
    "ruff>=0.15.11",
    "sphinx==8.2.3",
    "ty==0.0.17",
    "vulture==2.14",
    "watchdog==6.0.0",
    "werkzeug==3.1.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"

python_files = [
    "test_*.py",
    "*_test.py",
    "testing/python/*.py",
    ]


[tool.ty.rules]

unresolved-attribute = "ignore"

[dependency-groups]
dev = [
    "bandit==1.9.1",
    "cutelog>=2.2.0",
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "django-werkzeug==1.0.0",
    "icecream==2.1.8",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "myst-nb>=1.4.0",
    "myst-parser>=5.0.0",
    "pss>=1.45",
    "pydot==4.0.1",
    "pytest==9.0.1",
    "pytest-django==4.12.0",
    "ruff>=0.15.11",
    "sphinx==8.2.3",
    "ty==0.0.17",
    "vulture==2.14",
    "werkzeug==3.1.3",
    "watchdog==6.0.0",
]
